Implement /newsletter route
