# models/combined.js
@@ -3,6 +3,8 @@
 const DB = require('./index');
 const User = require('./user');
 const OAuth = require('./oauth');
+// eslint-disable-next-line no-unused-vars
+const Newsletter = require('./newsletter');
 
 
 User.hasMany(OAuth);
